# team-finder-bot

./: .dockerignore  .env  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  AWS_DEPLOYMENT_GUIDE.md  DEPLOYMENT.md  Dockerfile  FINAL_REPORT.md  Makefile  PRODUCTION.md  PROJECT_STRUCTURE.md  PROMPTS.md  QUICKSTART.md  QUICK_START_CHECKLIST.md  QUICK_TEST.md  README.md  REFACTORING.md  REFACTORING_REPORT.md  TESTING_GUIDE.md  docker-compose.yml  pyproject.toml  pytest.ini  recreate_db.py  requirements-dev.txt  run_admin.sh  start.sh  stop.sh
.github/workflows/: cd.yml  ci.yml  deploy.yml  test.yml
admin/: app.py
admin/templates/: index.html
bot/: .env.example  .gitignore  README.md  clear_db.py  config.py  main.py  requirements.txt  tasks.py
bot/common/: __init__.py  constants.py  exceptions.py  validators.py
bot/database/: __init__.py  crud.py  db.py  models.py
bot/handlers/: __init__.py  base.py  commands.py  invitations.py  profile.py  search.py  start.py  team.py
bot/handlers/registration/: __init__.py  base.py  cofounder.py  seeker.py  team.py
bot/keyboards/: __init__.py  inline.py  reply.py
bot/middlewares/: __init__.py  throttling.py
bot/services/: __init__.py  invitation_service.py  search_service.py  team_service.py  user_service.py
bot/utils/: __init__.py  constants.py  formatters.py  i18n.py  states.py  texts.py  validators.py
tests/: __init__.py  conftest.py  test_crud.py
tests/unit/: test_services.py  test_validators.py
